--- a/index.qmd
+++ b/index.qmd
@@ -3,7 +3,7 @@ title: "Welcome to My Analytics Lab"
 sidebar: false 
 ---
 
-Hello! My name is xxx xxxx.
+Hello! My name is Ahmet Kürşad Gürel.
 
 This is my personal webpage.
 
